--- a/power_map.html
+++ b/power_map.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="power_map.css">
-    <link rel="stylesheet" href="power_map.js">
+    <link rel="stylesheet" href="css/power_map.css">
+    <link rel="stylesheet" href="js/power_map.js">
     
 </head>
 <body>
