--- a/power_contact.html
+++ b/power_contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="power_contact.css">
+    <link rel="stylesheet" href="css/power_contact.css">
 </head>
 <body>
       <!-- 一 -->
