--- a/power_firstpage.html
+++ b/power_firstpage.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="power_firstpage.css">
+    <link rel="stylesheet" href="css/power_firstpage.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
    
 </head>
@@ -59,7 +59,7 @@
     </div> 
     </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="owl.carousel.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
         <script>
             $(document).ready(function(){
       $(".owl-carousel").owlCarousel({
