--- a/power_firstpage.html
+++ b/power_firstpage.html
@@ -2,14 +2,11 @@
 <html lang="en">
 <head>
     <!-- 如要使用空格用&nbsp; -->
-    <!-- 這頁有跑版
-    地圖那邊文字的外框設定不了 -->
-    <!-- 這頁的地圖偏左 開其他顯示器看出來的 -->
-    <!-- 手機板的字尾還要調整 -->
-    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0">
+    <meta name="title" content="Power_Beauty">
+    <meta name="description" content="這是健身房網站，裡面有教練，還有場館地圖，還有聯絡資訊。">
     <title>Power_Beauty 首頁</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/owl.theme.default.min.css">
