--- a/power_map.html
+++ b/power_map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>power_map</title>
     <link rel="stylesheet" href="css/power_map.css">
     <link rel="stylesheet" href="js/power_map.js">
     
